--- a/pre_install.yml
+++ b/pre_install.yml
@@ -84,6 +84,8 @@
       command: '{{ item }}'
       loop:        
         - sysctl -w vm.max_map_count=262144
+        - echo vm.max_map_count=262144 > /etc/sysctl.conf
+        - sysctl -p
         - sysctl -w fs.file-max=65536
         - docker-compose -f /home/centos/docker-compose.yml up -d
         - sleep 5
