--- a/helm.yml
+++ b/helm.yml
@@ -31,7 +31,7 @@
         chart_ref: promotheus-stable-repo/prometheus
         release_namespace: prometheus
         create_namespace: true
-        kubeconfig: /var/lib/jenkins/.kube/config
+        kubeconfig: /root/.kube/config
         values:
           persistence:
             storageClassName: "gp2"
@@ -42,7 +42,7 @@
         chart_ref: grafana-stable-repo/grafana
         release_namespace: grafana
         create_namespace: true
-        kubeconfig: /var/lib/jenkins/.kube/config
+        kubeconfig: /root/.kube/config
         values:
           replicas: 2
           adminPassword: 'welcome'
