--- a/helm.yml
+++ b/helm.yml
@@ -23,24 +23,26 @@
     - name: Add stable grafana chart repo
       community.kubernetes.helm_repository:
         name: grafana-stable-repo
-        repo_url: https://grafana.github.io/helm-charts
+        repo_url: https://grafana.github.io/helm-charts         
+
     - name: Deploy latest version of Prometheus chart inside monitoring namespace (and create it).
       community.kubernetes.helm:
         name: prometheus
         chart_ref: promotheus-stable-repo/prometheus
         release_namespace: prometheus
         create_namespace: true
-        kubeconfig: /root/.kube/config
+        kubeconfig: /var/lib/jenkins/.kube/config
         values:
           persistence:
             storageClassName: "gp2"
+
     - name: Deploy latest version of Grafana chart inside monitoring namespace with values
       community.kubernetes.helm:
         name: grafana
         chart_ref: grafana-stable-repo/grafana
         release_namespace: grafana
         create_namespace: true
-        kubeconfig: /root/.kube/config
+        kubeconfig: /var/lib/jenkins/.kube/config
         values:
           replicas: 2
           adminPassword: 'welcome'
